# memc-kv

./: Cargo.toml  README.md
kv_cache/: Cargo.toml
kv_cache/src/: lib.rs
src/: http_server.rs  main.rs  memcache_server.rs  metrics.rs
src/parser/: ascii.rs  mod.rs
